--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,14 @@
 body{
-    color:crimson;
+    color:#333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
 }
